--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <CheckBoxPreference
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <SwitchPreference
         android:defaultValue="true"
-        android:key="showPropNames"
-        android:summary="@string/propertyNamesSummary"
-        android:title="@string/propertyNamesTitle" />
+        android:key="@string/preferenceKeyShowPropertyNames"
+        android:summary="@string/preferenceSummaryPropertyNames"
+        android:title="@string/preferenceTitlePropertyNames" />
+    <SeekBarPreference
+        android:defaultValue="5"
+        android:key="@string/preferenceKeyDecimals"
+        android:max="9"
+        android:summary="@string/preferenceSummaryDecimals"
+        android:title="@string/preferenceTitleDecimals"
+        app:min="3" />
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="@string/preferenceKeyScientificFormatOnly"
+        android:summary="@string/preferenceSummaryScientificFormatOnly"
+        android:title="@string/preferenceTitleScientificFormatOnly" />
 </PreferenceScreen>
