--- a/app/src/main/res/menu/steam_menu.xml
+++ b/app/src/main/res/menu/steam_menu.xml
@@ -2,8 +2,13 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/settings"
+        android:id="@+id/menu_preferences"
         android:icon="@android:drawable/ic_menu_preferences"
-        android:title="@string/settings"
+        android:title="@string/menu_title_preferences"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_info_details"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:title="@string/menu_title_info_details"
+        app:showAsAction="never" />
 </menu>
