improve binding, unitSet pref

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -18,4 +18,12 @@
         android:key="@string/preferenceKeyScientificFormatOnly"
         android:summary="@string/preferenceSummaryScientificFormatOnly"
         android:title="@string/preferenceTitleScientificFormatOnly" />
+
+    <ListPreference
+        android:defaultValue="@string/unitSetDefaultValue"
+        android:key="@string/preferenceKeyUnitSet"
+        android:title="@string/preferenceTitleUnitSet"
+        android:summary="@string/preferenceSummaryUnitSet"
+        android:entries="@array/unitSets"
+        android:entryValues="@array/unitSetsValues"/>
 </PreferenceScreen>
