--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="fragmentContainer" type="id" />
+    <item name="rateViewNoButton" type="id" />
+    <item name="rateViewYesButton" type="id" />
 </resources>
