fake config.xml

--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="adAppId" translatable="false">ca-app-pub-2256461421910631~6805693188</string>
-    <string name="adUnitIdBanner" translatable="false">ca-app-pub-2256461421910631/1553366503</string>
-    <string name="contactUsEmail" translatable="false">lextop.games@gmail.com</string>
-    <string name="contactUsGooglePlay" translatable="false">https://play.google.com/store/apps/details?id=ru.lextop.steamcalculator</string>
-    <string name="contactUsTwitter" translatable="false">alexej520</string>
+    <!--test adAppId, read more https://developers.google.com/admob/android/quick-start-->
+    <string name="adAppId" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
+    <!--test adUnitIdBanner, read more https://developers.google.com/admob/android/test-ads-->
+    <string name="adUnitIdBanner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="contactUsEmail" translatable="false">example@example.com</string>
+    <string name="contactUsGooglePlay" translatable="false">https://play.google.com/store</string>
+    <string name="contactUsTwitter" translatable="false">twitter</string>
 </resources>
