--- a/app/src/main/res/layout/item_refractiveindex.xml
+++ b/app/src/main/res/layout/item_refractiveindex.xml
@@ -4,10 +4,6 @@
 
     <data>
 
-        <variable
-            name="vm"
-            type="ru.lextop.steamcalculator.vm.RefractiveIndexViewModel" />
-
         <import
             alias="V"
             type="android.view.View" />
@@ -15,10 +11,6 @@
         <import
             alias="U"
             type="ru.lextop.steamcalculator.binding.BindingAdaptersKt" />
-
-        <variable
-            name="refractiveIndex"
-            type="ru.lextop.steamcalculator.model.QuantityWrapper" />
 
         <variable
             name="vm"
@@ -40,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="8dp"
-                android:text="@{U.getSpanned(context, refractiveIndex.nameRes)}"
+                android:text="@{U.getSpanned(context, vm.WavelengthWrapper.nameRes)}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:visibility="@{vm.isQuantityNameVisibleLive ? V.VISIBLE : V.GONE}" />
 
@@ -55,21 +47,29 @@
                     android:ems="2"
                     android:paddingBottom="@{U.sp(context, @dimen/abc_text_size_subhead_material * 0.25f)}"
                     android:paddingTop="@{U.sp(context, @dimen/abc_text_size_subhead_material * 0.25f)}"
-                    android:text="@{U.getSpanned(context, refractiveIndex.symbolRes)}"
+                    android:text="@{U.getSpanned(context, vm.WavelengthWrapper.symbolRes)}"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_gravity="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
                 <EditText
                     android:layout_width="0dp"
+                    android:text="@{vm.wavelengthValueLive}"
+                    bind:onInputValue="@{(input) -> vm.inputWavelengthValue(input)}"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"/>
 
                 <Spinner
+                    android:id="@+id/wavelength_units"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onItemSelected="@{(a,b,c,id) -> vm.selectWavelengthUnit((int) id)}"
                     android:selectedItemPosition="@{vm.wavelengthUnitSelectionLive}" />
             </LinearLayout>
         </LinearLayout>
-        <include layout="@layout/item_quantity" bind:vm="@{vm}"/>
+        <include
+            android:id="@+id/refractive_index"
+            layout="@layout/item_quantity" bind:vm="@{vm.refractiveIndexQuantityValueViewModel}"/>
     </LinearLayout>
 </layout>
