--- a/app/src/main/res/layout/item_quantity.xml
+++ b/app/src/main/res/layout/item_quantity.xml
@@ -8,6 +8,10 @@
             name="vm"
             type="ru.lextop.steamcalculator.vm.QuantityValueViewModel" />
 
+        <variable
+            name="unitAdapter"
+            type="ru.lextop.steamcalculator.ui.UnitArrayAdapter"/>
+
         <import
             alias="V"
             type="android.view.View" />
@@ -68,6 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:adapter="@{unitAdapter}"
                 android:onItemSelected="@{(a,b,c,id)->vm.selectUnit((int) id)}"
                 android:selectedItemPosition="@{vm.unitSelectionLive}" />
         </LinearLayout>
