--- a/app/src/main/res/layout/fragment_steam.xml
+++ b/app/src/main/res/layout/fragment_steam.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
@@ -34,15 +35,26 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <include android:id="@+id/firstSelectedQuantity" layout="@layout/item_selectquantity" />
-                <include android:id="@+id/secondSelectedQuantity" layout="@layout/item_selectquantity" />
+                android:orientation="vertical"
+                android:paddingStart="8dp">
+
+                <include
+                    android:id="@+id/firstSelectedQuantity"
+                    layout="@layout/item_selectquantity"
+                    bind:vm="@{vm.firstSelectQuantityViewModel}" />
+
+                <include
+                    android:id="@+id/secondSelectedQuantity"
+                    layout="@layout/item_selectquantity"
+                    bind:vm="@{vm.secondSelectQuantityViewModel}" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.RecyclerView
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            android:scrollbars="vertical"
+            android:id="@+id/steam_quantityValues"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
     </LinearLayout>
 </layout>
