--- a/app/src/main/res/layout/fragment_steam.xml
+++ b/app/src/main/res/layout/fragment_steam.xml
@@ -59,6 +59,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+            app:layoutManager="ru.lextop.steamcalculator.ui.BlockRequestChildRectangleOnScreenLinearLayoutManager" />
     </LinearLayout>
 </layout>
