--- a/app/src/main/res/layout/fragment_steam.xml
+++ b/app/src/main/res/layout/fragment_steam.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="0dp"
@@ -52,9 +52,9 @@
                     layout="@layout/item_selectquantity"
                     bind:vm="@{vm.secondSelectQuantityViewModel}" />
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/steam_quantityValues"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
