--- a/app/src/main/res/layout/fragment_infodetails.xml
+++ b/app/src/main/res/layout/fragment_infodetails.xml
@@ -1,55 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
-        <import type="ru.lextop.steamcalculator.binding.BindingAdaptersKt" alias="U"/>
-        <import type="android.text.method.LinkMovementMethod" alias="Link" />
+
+        <import
+            alias="U"
+            type="ru.lextop.steamcalculator.binding.BindingAdaptersKt" />
     </data>
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingTop="16dp"
         android:paddingBottom="16dp">
+
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autoLink="web"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:text="@{U.getSpanned(context, @string/sourcesInfo)}"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            bind:movementMethod="@{Link.getInstance()}"/>
-        <TextView
-            android:text="@string/contactUs"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
             android:layout_marginTop="16dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="@string/contactUs"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-        <TextView
+            android:autoLink="web"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp"
             android:text="@{U.getSpanned(context, @string/contactUsByTwitter(@string/contactUsTwitter))}"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            bind:movementMethod="@{Link.getInstance()}"/>
-        <TextView
+            android:autoLink="email"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp"
             android:text="@{U.getSpanned(context, @string/contactUsByEmail(@string/contactUsEmail))}"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            bind:movementMethod="@{Link.getInstance()}"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
         <TextView
-            android:text="@{U.getSpanned(context, @string/contactUsByGooglePlay(@string/contactUsGooglePlay, @string/app_name))}"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            bind:movementMethod="@{Link.getInstance()}"/>
+            android:autoLink="web"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp"
+            android:text="@{U.getSpanned(context, @string/contactUsByGooglePlay(@string/contactUsGooglePlay, @string/app_name))}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
     </LinearLayout>
 </layout>
