--- a/app/src/main/res/layout/fragment_steam.xml
+++ b/app/src/main/res/layout/fragment_steam.xml
@@ -21,6 +21,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            bind:menu="@menu/steam_menu"
+            app:title="@string/app_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
         <FrameLayout
             android:id="@+id/steam_ad_container"
             android:layout_width="match_parent"
@@ -29,12 +37,12 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="0dp"
-            app:cardPreventCornerOverlap="false"
-            android:layout_marginTop="@dimen/fix_cardview_top"
             android:layout_marginStart="@dimen/fix_cardview_horizontal"
+            android:layout_marginTop="@dimen/fix_cardview_top"
             android:layout_marginEnd="@dimen/fix_cardview_horizontal"
-            app:cardElevation="4dp">
+            app:cardCornerRadius="0dp"
+            app:cardElevation="4dp"
+            app:cardPreventCornerOverlap="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
