--- a/app/src/main/res/layout/fragment_steam.xml
+++ b/app/src/main/res/layout/fragment_steam.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/tools">
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -21,13 +21,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
+        <ru.lextop.steamcalculator.ui.Toolbar
             android:id="@+id/toolbar"
-            bind:menu="@menu/steam_menu"
-            app:title="@string/app_name"
+            style="@style/Widget.App.Toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            app:menu="@menu/steam_menu"
+            app:navigationIcon="@null"
+            app:title="@string/app_name" />
 
         <FrameLayout
             android:id="@+id/steam_ad_container"
