--- a/app/src/main/res/layout/item_dropdown_property.xml
+++ b/app/src/main/res/layout/item_dropdown_property.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:minHeight="32dp"
+    android:gravity="center_vertical"
     android:baselineAlignedChildIndex="0"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/symbolTextView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:paddingTop="4sp"
+        android:paddingBottom="4sp"
         android:ellipsize="marquee"
-        android:ems="1"
-        android:lineSpacingMultiplier="1.5"
-        android:singleLine="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:ems="1"
+        android:singleLine="true"
         tools:text="P" />
 
     <TextView
@@ -24,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:lineSpacingMultiplier="1.5"
+        android:maxLines="1"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         tools:text="Pressure" />
 </LinearLayout>
