--- a/app/src/main/res/layout/item_quantity.xml
+++ b/app/src/main/res/layout/item_quantity.xml
@@ -51,10 +51,10 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:ems="2"
-                android:paddingBottom="@{U.sp(context, @dimen/abc_text_size_subhead_material * 0.25f)}"
-                android:paddingTop="@{U.sp(context, @dimen/abc_text_size_subhead_material * 0.25f)}"
+                android:paddingBottom="4sp"
+                android:paddingTop="4sp"
                 android:text="@{vm.quantitySymbol}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 tools:text="@string/s" />
 
             <TextView
