--- a/app/src/main/res/layout/item_view_property.xml
+++ b/app/src/main/res/layout/item_view_property.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/symbolTextView"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:ellipsize="marquee"
-    android:ems="1"
-    android:lineSpacingMultiplier="1.5"
-    android:paddingStart="8dp"
-    android:paddingEnd="8dp"
-    android:singleLine="true" />
+    android:orientation="horizontal"
+    android:minHeight="32dp"
+    android:baselineAlignedChildIndex="0"
+    android:layout_height="wrap_content">
+    <TextView
+        android:layout_gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/symbolTextView"
+        android:ellipsize="marquee"
+        android:ems="1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:paddingBottom="4sp"
+        android:paddingTop="4sp"
+        android:singleLine="true" />
+</LinearLayout>
