--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="fix_cardview_horizontal">-4dp</dimen>
     <dimen name="fix_cardview_top">-6dp</dimen>
+
+    <dimen name="size_small">8dp</dimen>
+    <dimen name="banner_min_height">48dp</dimen>
 </resources>
